fix copy, spacing, hover

--- a/src/styles/reset.pcss
+++ b/src/styles/reset.pcss
@@ -73,8 +73,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-    line-height: normal;
+h6,
+caption {
+    line-height: 1;
     letter-spacing: -.01em;
     word-spacing: .01em;
 }
